--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -585,7 +585,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 clearfix text-center">
-                    <span class="copyright pull-left">Copyright &copy; NegusMath Inc</span>
+                    <span class="copyright pull-left">Copyright &copy; 2015 NegusMath Inc</span>
                     <ul class="list-inline quicklinks pull-right">
                         <li><a href="http://dlp.io/terms.html" target="_blank">Privacy Policy</a>
                         </li>
