--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -431,7 +431,7 @@
             <div class="col-lg-4" id="sidebar">
                 <div class="panel panel-default">
 
-                    <div class="panel-heading"><i class="fa fa-youtube-play"></i> THIS WEEKS VIDEO
+                    <div class="panel-heading"><i class="fa fa-youtube-play"></i> THIS WEEK'S VIDEO
                     </div>
 
                     <div class="panel-body">
